--- a/Product crud core mvc/Product_Crud/Product_Crud/Views/Shared/_Layout.cshtml
+++ b/Product crud core mvc/Product_Crud/Product_Crud/Views/Shared/_Layout.cshtml
@@ -6,7 +6,9 @@
     <title>@ViewData["Title"] - Product_Crud</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Product_Crud.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/Product_Crud.styles.css" asp-append-version="true" />   
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
 </head>
 <body>
     <header>
@@ -45,5 +47,23 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+    <script>
+        $(document).ready(()=>{
+            $(".addmore").click(()=>{
+                console.log("click add more");
+                $.ajax({
+                    url:"/Product/AddColor",
+                    type:"get",
+                    success:(d)=>{
+                        $(".con").append(d);
+                    },
+                });
+            });
+            $(document).on("click", ".remove",(e)=>{
+                console.log("remove");
+                $(e.currentTarget).closest(".rc").remove();
+            });
+        });
+    </script>
 </body>
 </html>
